# vllm-webgpu

./: .gitignore  pyproject.toml  run_inference.py
docs/superpowers/plans/: 2026-06-30-vllm-webgpu-implementation.md
docs/superpowers/specs/: 2026-06-29-vllm-webgpu-design.md
tests/: conftest.py  test_buffer.py  test_config.py  test_gemma4_model.py  test_gguf_loader.py  test_integration.py  test_kernels_attn.py  test_kernels_gemma.py  test_kernels_matmul.py  test_kernels_norm.py  test_kernels_rope.py  test_kernels_sample.py  test_llama_model.py  test_pipeline.py  test_platform.py  test_worker.py
vllm_webgpu/: __init__.py  compat.py  config.py  envs.py  platform.py  utils.py
vllm_webgpu/models/: base.py  gemma4.py  llama.py
vllm_webgpu/quant/: gguf_loader.py
vllm_webgpu/shaders/gemma/: logit_softcap.wgsl  per_head_rms_norm_no_weight.wgsl  ple_gelu_mul.wgsl  ple_skip_scale_add.wgsl  ple_stage1_fuse.wgsl
vllm_webgpu/shaders/generic/: add.wgsl  argmax.wgsl  attn_output.wgsl  attn_score.wgsl  embedding_lookup.wgsl  fused_norm_add.wgsl  fused_per_head_norm_rope.wgsl  gelu_mul.wgsl  kv_cache_store.wgsl  matmul_quant.wgsl  matmul_quant_mr4.wgsl  per_head_rms_norm.wgsl  rms_norm.wgsl  rope.wgsl  softmax.wgsl  topk256.wgsl
vllm_webgpu/v1/: cache_policy.py  model_runner.py  worker.py
vllm_webgpu/webgpu/: buffer.py  device.py  pipeline.py
