[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-webgpu"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.20",
    "wgpu>=0.20",
    "numpy>=1.24",
    "safetensors>=0.4",
    "gguf>=0.10",
    "psutil>=5.9",
]

[project.entry-points."vllm.platform_plugins"]
webgpu = "vllm_webgpu:register"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.3"]

[tool.hatch.build.targets.wheel]
packages = ["vllm_webgpu"]
